--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ os: "linux"
 
 before_install:
     - "sudo apt-get install gfortran"
-    - "git clone https://github.com/bats-core/bats-core.git && cd bats-core && sudo ./install.sh /usr/local"
+    - "git clone https://github.com/bats-core/bats-core.git && cd bats-core && sudo ./install.sh /usr/local && cd .."
 
 script:
-    - "cd latex/pr10/programme && make"
+    - "cd latex/pr10/programme && make && bats tests.bats"
