--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
     - "git clone https://github.com/bats-core/bats-core.git && cd bats-core && sudo ./install.sh /usr/local && cd .."
 
 script:
+    - "cd latex/pr10/homework/01 && make && bats tests.bats"
     - "cd latex/pr10/programme && make && bats tests.bats"
