--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ os: "linux"
 
 before_install:
     - "sudo apt-get install gfortran"
-    - "git clone https://github.com/bats-core/bats-core.git && cd bats-core && sudo ./install.sh /usr/local && cd .."
+    - "git clone https://github.com/bats-core/bats-core.git && pushd bats-core && sudo ./install.sh /usr/local && popd"
 
 script:
-    - "cd latex/pr10/homework/01 && make && bats tests.bats"
-    - "cd latex/pr10/programme && make && bats tests.bats"
+    - "pushd latex/pr10/homework/01 && make && bats tests.bats && popd"
+    - "pushd latex/pr10/programme && make && bats tests.bats && popd"
