--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_install:
 
 script:
     - "pushd latex/pr10/homework/01 && make && bats tests.bats && popd"
+    - "pushd latex/pr10/homework/02 && make && bats tests.bats && popd"
     - "pushd latex/pr10/programme && make && bats tests.bats && popd"
