feat: Include git-restore-mtime in pipeline
Set file timestamps to commit timestamps to
properly utilize make

--- a/.drone.yml
+++ b/.drone.yml
@@ -22,6 +22,7 @@ steps:
     - name: "Build the website"
       image: "registry.kalehmann.de/tuddmatheba:latest"
       commands:
+          - 'git restore-mtime'
           - 'make'
       when:
           branch:
